# wasm-practitioners-guide-to-observability

./: .gitignore  README.md
src/guest/components/manual/rust/: Cargo.toml  README.md  component-instr-command.wasm
src/guest/components/manual/rust/src/: main.rs
src/guest/go/: main.wasm
src/guest/modules/automatic/go/: Makefile  config.json  go.sum  main.debug.wasm  main.go  main.instr.wasm  main.wasm
src/guest/modules/automatic/rust/: Makefile  config.json  rust.instr.wasm  rust.wasm
src/guest/modules/automatic/rust/src/: main.rs
src/guest/modules/manual/go/: go.mod  main.go
src/guest/modules/manual/rust/: rust.instr.wasm  rust.wasm
src/guest/rust/: Cargo.toml
src/guest/rust/src/: main.rs
src/host/: go.mod  go.sum  main.go
src/host/component-runner/: Cargo.toml  README.md
src/host/module-runner/: Dockerfile  go.mod  go.sum  main.go
