[package]
name = "component-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dylibso-observe-sdk = { git = "https://github.com/dylibso/observe-sdk", features = ["component-model"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
wasmtime = ">= 17.0.0, < 18.0.0"
wasmtime-wasi = ">= 17.0.0, < 18.0.0"
